Add user datasources
