# lib/presentation/schemes/requests/login_request.go
@@ -1,0 +1,6 @@
+package requests
+
+type LoginRequest struct {
+	Username string `json:"username" example:"dwikurnaitom"`
+	Password string `json:"password" example:"123456"`
+}
